# rust_serde_json

./: .markdownlint.json  Cargo.toml  FROM_HERE.md  Makefile.toml  README.md  Rust_Error_Box_Dyn.md  Rust_Main_Run_Result_ExitCode.md  Rust_Option _and_Result.md  Rust_Option_and_Result.md  option_generic_type.rs
examples/: 01_simple_enums.rs  02_match_enums.rs  03_option_generic_type.rs  05_option_unwrap.rs  05_option_unwrap_two.rs  06_option_example_str.rs  07_option_return_from_fn.rs  08_2_option_return_work_with_three_different_ways_none.rs  08_option_return_work_with_three_different_ways.rs  08_option_return_work_with_three_different_ways_none.rs  09_option_return_work_with_three_different_ways_none.rs  10_option_inside_struct.rs  11_option_inside_struct_real_example_pop.rs  12_dbg_on_the_result.rs  12_matching_on_the_result.rs  13_matching_on_the_result.rs  14_result_unwrap.rs  15_result_unwrap_error_handling_with_expect.rs  16_Using_question_mark_and_handling_different_errors.rs  16_generate_json_file.rs  16_using_question_mark_and_handling_different_errors.rs  17_using_question_mark_and_handling_different_errors.rs  18_first_anyhow.rs  19_using_eyre.rs  20_exitcode_hello_world.rs  21_eprintln.rs  21_result_match.rs  assert_err.rs  bubble-up-custom-errors.rs  bubble-up-multiple-errors.rs  bubble_up_error.rs  bubble_up_error_string.rs  error.rs  error_custom_error.rs  example.rs  json_to_struct.rs  match-boxed-errors.rs  match_enums.rs  matching_on_option.rs  my-custom-error.rs  (+12 more)
examples/errors/: bubble-up-multiple-errors.rs  fallback_value.rs  (+1 more)
src/: main.rs
(+15 files in other folders)
