[package]
name = "rust_serde_json"
version = "0.1.0"
edition = "2021"

[dependencies]
# blocking = "1.5.1"
# reqwest = "0.12.3"
reqwest = { version = "0.12.3", features = ["blocking","json"] }
# serde = "1.0.197"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
# tokio-tasks = "0.2.1"
# url = "2.5.0"
