[package]
name = "rust_serde_json"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
# serde = "1.0.197"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
watch = "0.2.3"
# tokio-tasks = "0.2.1"
# url = "2.5.0"
